// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BannerMessage correctly handles a primaryButton button prop 1`] = `
<MessageWrapper
  style={
    {
      "backgroundColor": "transparent",
      "flex": 1,
      "justifyContent": "flex-start",
    }
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "#fff",
          "elevation": 3,
          "margin": 16,
          "shadowColor": "#000",
          "shadowOffset": {
            "height": 2,
            "width": 2,
          },
          "shadowOpacity": 0.1,
          "shadowRadius": 2,
        },
        {},
        {},
      ]
    }
    testID="inappmessaging-topbanner-dialog"
  >
    <View
      style={
        {
          "flexDirection": "row",
          "padding": 12,
        }
      }
    >
      <View
        style={
          {
            "flex": 1,
            "paddingHorizontal": 8,
          }
        }
      />
      <View
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        hitSlop={10}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {},
            undefined,
            [
              {
                "alignSelf": "flex-start",
                "marginLeft": "auto",
              },
              undefined,
            ],
          ]
        }
        testID="in-app-messaging--close-button"
      >
        <Image
          accessibilityRole="image"
          accessible={true}
          source={
            {
              "testUri": "../../../packages/react-native/src/assets/icons/close.png",
            }
          }
          style={
            [
              {
                "height": 20,
                "resizeMode": "contain",
                "tintColor": undefined,
                "width": 20,
              },
              undefined,
            ]
          }
        />
      </View>
    </View>
    <View
      style={
        {
          "flexDirection": "row",
          "justifyContent": "center",
          "padding": 4,
        }
      }
    >
      <View
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "backgroundColor": "transparent",
              "borderColor": "hsl(210, 10%, 58%)",
              "borderRadius": 4,
              "borderWidth": 1,
              "justifyContent": "center",
              "paddingHorizontal": 16,
              "paddingVertical": 12,
            },
            undefined,
            [
              {},
              {
                "backgroundColor": "#e8e8e8",
                "borderRadius": 4,
                "flex": 1,
                "margin": 8,
                "padding": 12,
              },
              {},
              {},
            ],
          ]
        }
        testID="in-app-messaging--primary-button"
      >
        <Text
          style={
            [
              {
                "color": "hsl(210, 50%, 10%)",
                "fontSize": 16,
                "fontWeight": "700",
                "textAlign": "center",
              },
              [
                {
                  "fontSize": 16,
                  "fontWeight": "400",
                  "lineHeight": 24,
                  "textAlign": "center",
                },
                {},
                {},
              ],
            ]
          }
        >
          primary button
        </Text>
      </View>
    </View>
  </View>
</MessageWrapper>
`;

exports[`BannerMessage correctly handles a secondaryButton button prop 1`] = `
<MessageWrapper
  style={
    {
      "backgroundColor": "transparent",
      "flex": 1,
      "justifyContent": "flex-start",
    }
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "#fff",
          "elevation": 3,
          "margin": 16,
          "shadowColor": "#000",
          "shadowOffset": {
            "height": 2,
            "width": 2,
          },
          "shadowOpacity": 0.1,
          "shadowRadius": 2,
        },
        {},
        {},
      ]
    }
    testID="inappmessaging-topbanner-dialog"
  >
    <View
      style={
        {
          "flexDirection": "row",
          "padding": 12,
        }
      }
    >
      <View
        style={
          {
            "flex": 1,
            "paddingHorizontal": 8,
          }
        }
      />
      <View
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        hitSlop={10}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {},
            undefined,
            [
              {
                "alignSelf": "flex-start",
                "marginLeft": "auto",
              },
              undefined,
            ],
          ]
        }
        testID="in-app-messaging--close-button"
      >
        <Image
          accessibilityRole="image"
          accessible={true}
          source={
            {
              "testUri": "../../../packages/react-native/src/assets/icons/close.png",
            }
          }
          style={
            [
              {
                "height": 20,
                "resizeMode": "contain",
                "tintColor": undefined,
                "width": 20,
              },
              undefined,
            ]
          }
        />
      </View>
    </View>
    <View
      style={
        {
          "flexDirection": "row",
          "justifyContent": "center",
          "padding": 4,
        }
      }
    >
      <View
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "backgroundColor": "transparent",
              "borderColor": "hsl(210, 10%, 58%)",
              "borderRadius": 4,
              "borderWidth": 1,
              "justifyContent": "center",
              "paddingHorizontal": 16,
              "paddingVertical": 12,
            },
            undefined,
            [
              {},
              {
                "backgroundColor": "#e8e8e8",
                "borderRadius": 4,
                "flex": 1,
                "margin": 8,
                "padding": 12,
              },
              {},
              {},
            ],
          ]
        }
        testID="in-app-messaging--secondary-button"
      >
        <Text
          style={
            [
              {
                "color": "hsl(210, 50%, 10%)",
                "fontSize": 16,
                "fontWeight": "700",
                "textAlign": "center",
              },
              [
                {
                  "fontSize": 16,
                  "fontWeight": "400",
                  "lineHeight": 24,
                  "textAlign": "center",
                },
                {},
                {},
              ],
            ]
          }
        >
          secondary button
        </Text>
      </View>
    </View>
  </View>
</MessageWrapper>
`;

exports[`BannerMessage renders a message as expected with an image 1`] = `
<MessageWrapper
  style={
    {
      "backgroundColor": "transparent",
      "flex": 1,
      "justifyContent": "flex-start",
    }
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "#fff",
          "elevation": 3,
          "margin": 16,
          "shadowColor": "#000",
          "shadowOffset": {
            "height": 2,
            "width": 2,
          },
          "shadowOpacity": 0.1,
          "shadowRadius": 2,
        },
        {},
        {},
      ]
    }
    testID="inappmessaging-topbanner-dialog"
  >
    <View
      style={
        {
          "flexDirection": "row",
          "padding": 12,
        }
      }
    >
      <View
        style={
          {
            "justifyContent": "center",
          }
        }
      >
        <Image
          source={
            {
              "uri": "asset.png",
            }
          }
          style={
            [
              {
                "height": 100,
                "width": 100,
              },
              undefined,
            ]
          }
          testID="in-app-messaging--image"
        />
      </View>
      <View
        style={
          {
            "flex": 1,
            "paddingHorizontal": 8,
          }
        }
      />
      <View
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        hitSlop={10}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {},
            undefined,
            [
              {
                "alignSelf": "flex-start",
                "marginLeft": "auto",
              },
              undefined,
            ],
          ]
        }
        testID="in-app-messaging--close-button"
      >
        <Image
          accessibilityRole="image"
          accessible={true}
          source={
            {
              "testUri": "../../../packages/react-native/src/assets/icons/close.png",
            }
          }
          style={
            [
              {
                "height": 20,
                "resizeMode": "contain",
                "tintColor": undefined,
                "width": 20,
              },
              undefined,
            ]
          }
        />
      </View>
    </View>
  </View>
</MessageWrapper>
`;

exports[`BannerMessage renders a message as expected without an image 1`] = `
<MessageWrapper
  style={
    {
      "backgroundColor": "transparent",
      "flex": 1,
      "justifyContent": "flex-start",
    }
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "#fff",
          "elevation": 3,
          "margin": 16,
          "shadowColor": "#000",
          "shadowOffset": {
            "height": 2,
            "width": 2,
          },
          "shadowOpacity": 0.1,
          "shadowRadius": 2,
        },
        {},
        {},
      ]
    }
    testID="inappmessaging-topbanner-dialog"
  >
    <View
      style={
        {
          "flexDirection": "row",
          "padding": 12,
        }
      }
    >
      <View
        style={
          {
            "flex": 1,
            "paddingHorizontal": 8,
          }
        }
      />
      <View
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        hitSlop={10}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {},
            undefined,
            [
              {
                "alignSelf": "flex-start",
                "marginLeft": "auto",
              },
              undefined,
            ],
          ]
        }
        testID="in-app-messaging--close-button"
      >
        <Image
          accessibilityRole="image"
          accessible={true}
          source={
            {
              "testUri": "../../../packages/react-native/src/assets/icons/close.png",
            }
          }
          style={
            [
              {
                "height": 20,
                "resizeMode": "contain",
                "tintColor": undefined,
                "width": 20,
              },
              undefined,
            ]
          }
        />
      </View>
    </View>
  </View>
</MessageWrapper>
`;
